# D-MeshOptimizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dub.json
.github/workflows/: ci.yml
examples/: simplify.d
source/meshoptimizer/: c.d
